Recommend using assertthat package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ Imports:
     assertive.properties,
     assertive.sets,
     assertive.types,
+    assertthat,
     cowplot,
     crayon,
     dplyr,
