Improve travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ matrix:
 env:
   global:
     - LINTR_COMMENT_BOT=true
+    - R_MAX_NUM_DLLS=150
 
 # r_build_args: "--no-build-vignettes"
 # r_check_args: "--no-vignettes"
