--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,47 @@
 # Travis-CI configuration for Bioconductor packages
 # https://docs.travis-ci.com/user/languages/r
 
-language: r
-cache: packages
+# How Travis builds R packages:
+# https://github.com/travis-ci/travis-build/blob/master/lib/travis/build/script/r.rb
 
-r:
-  - bioc-release
-  # - bioc-devel
+# Can we use build stages to cache the Bioconductor package library?
+# https://docs.travis-ci.com/user/build-stages
+# https://docs.travis-ci.com/user/build-stages/warm-cache/
 
-os:
-  # - linux
-  - osx
-
-matrix:
-  exclude:
-  - os: osx
-    r: bioc-devel
-
-# blocklist
-# branches:
-#   except:
-#   - develop
-
-# safelist
-# branches:
-#   only:
-#   - master
-
-env:
-  global:
-    - LINTR_COMMENT_BOT=true
-    - R_MAX_NUM_DLLS=150
+# Temporarily enable when caching package library.
+# https://gist.github.com/mjsteinbaugh/47d9a7aecdd8c3c1962a3247d791635f
+script: true
 
 # r_build_args: "--no-build-vignettes"
 # r_check_args: "--no-vignettes"
 
-# Set true before submission to Bioconductor
-warnings_are_errors: false
+language: r
+cache: packages
+sudo: false
+bioc_required: true
 
-# Temporarily enable when caching Bioconductor packages
-# script: true
+matrix:
+  include:
+  - os: linux
+    r: bioc-release
+    warnings_are_errors: true
+  - os: linux
+    r: bioc-devel
+    latex: false
+    warnings_are_errors: false
+  - os: osx
+    r: bioc-release
+    fortran: false
+    latex: false
+    warnings_are_errors: false
+  fast_finish: true
+
+env:
+  global:
+    - _R_CHECK_FORCE_SUGGESTS_=false
+    - LINTR_COMMENT_BOT=true
+    - R_MAX_NUM_DLLS=150
+    - R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
 
 r_packages:
   - covr
