--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,18 +166,11 @@ importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_numeric)
 importFrom(assertive.types,assert_is_tbl_df)
 importFrom(assertive.types,is_a_string)
+importFrom(assertthat,assert_that)
+importFrom(assertthat,validate_that)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,Gene2Symbol)
-importFrom(basejump,assertHasRownames)
-importFrom(basejump,assertIsAStringOrNULL)
-importFrom(basejump,assertIsAlpha)
-importFrom(basejump,assertIsAnImplicitInteger)
-importFrom(basejump,assertIsColorScaleContinuousOrNULL)
-importFrom(basejump,assertIsColorScaleDiscreteOrNULL)
-importFrom(basejump,assertIsFillScaleDiscreteOrNULL)
-importFrom(basejump,assertIsHeaderLevel)
-importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,camel)
 importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
@@ -199,7 +192,6 @@ importFrom(basejump,snake)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,upperCamel)
 importFrom(cowplot,plot_grid)
-importFrom(crayon,bold)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,everything)
@@ -244,6 +236,15 @@ importFrom(ggplot2,scale_radius)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(goalie,assertHasRownames)
+importFrom(goalie,assertIsAStringOrNULL)
+importFrom(goalie,assertIsAlpha)
+importFrom(goalie,assertIsAnImplicitInteger)
+importFrom(goalie,assertIsColorScaleContinuousOrNULL)
+importFrom(goalie,assertIsColorScaleDiscreteOrNULL)
+importFrom(goalie,assertIsFillScaleDiscreteOrNULL)
+importFrom(goalie,assertIsHeaderLevel)
+importFrom(goalie,assertIsImplicitInteger)
 importFrom(googlesheets,gs_key)
 importFrom(googlesheets,gs_read)
 importFrom(magrittr,"%>%")
