Update NAMESPACE and data set references

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -237,7 +237,6 @@ importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(goalie,assertHasRownames)
-importFrom(goalie,assertIsAStringOrNULL)
 importFrom(goalie,assertIsAlpha)
 importFrom(goalie,assertIsAnImplicitInteger)
 importFrom(goalie,assertIsColorScaleContinuousOrNULL)
@@ -245,6 +244,7 @@ importFrom(goalie,assertIsColorScaleDiscreteOrNULL)
 importFrom(goalie,assertIsFillScaleDiscreteOrNULL)
 importFrom(goalie,assertIsHeaderLevel)
 importFrom(goalie,assertIsImplicitInteger)
+importFrom(goalie,assertIsStringOrNULL)
 importFrom(googlesheets,gs_key)
 importFrom(googlesheets,gs_read)
 importFrom(magrittr,"%>%")
