Import additional assert checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ importFrom(assertive.properties,assert_is_scalar)
 importFrom(assertive.sets,assert_are_disjoint_sets)
 importFrom(assertive.sets,assert_are_intersecting_sets)
 importFrom(assertive.sets,assert_is_subset)
+importFrom(assertive.sets,is_subset)
 importFrom(assertive.types,assert_is_a_bool)
 importFrom(assertive.types,assert_is_a_number)
 importFrom(assertive.types,assert_is_a_string)
@@ -245,6 +246,7 @@ importFrom(goalie,assertIsFillScaleDiscreteOrNULL)
 importFrom(goalie,assertIsHeaderLevel)
 importFrom(goalie,assertIsImplicitInteger)
 importFrom(goalie,assertIsStringOrNULL)
+importFrom(goalie,hasRownames)
 importFrom(googlesheets,gs_key)
 importFrom(googlesheets,gs_read)
 importFrom(magrittr,"%>%")
