Draft update to show methods to get build checks to pass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ exportMethods(rownames)
 exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
+exportMethods(show)
 exportMethods(topMarkers)
 exportMethods(weights)
 importClassesFrom(Seurat,seurat)
