Improve `show()` and `summary()` methods. Using `show()` for `CellCycleMarkers` and `CellTypeMarkers`. Using `summary()` for `SeuratMarkers` and `SeuratMarkersPerCluster`.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -110,5 +110,6 @@ Collate:
     'runZinbwave-methods.R'
     'seurat-SingleCellExperiment-methods.R'
     'show-methods.R'
+    'summary-methods.R'
     'topMarkers-methods.R'
     'weights-internal.R'
