--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
+exportMethods(summary)
 exportMethods(topMarkers)
 exportMethods(weights)
 importClassesFrom(Seurat,seurat)
@@ -121,6 +122,7 @@ importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,split)
+importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
 importFrom(Seurat,Convert)
 importFrom(Seurat,CreateSeuratObject)
