--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-Cell Clustering Visualization
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.2.1
-Date: 2018-11-20
+Date: 2018-11-25
 Authors@R: c(
     person(
         given = "Michael",
@@ -27,7 +27,7 @@ Encoding: UTF-8
 LazyData: false
 Depends:
     R (>= 3.5),
-    SingleCellExperiment,
+    SingleCellExperiment (>= 1.2),
     basejump (>= 0.8.2)
 Imports:
     BiocGenerics,
