--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,8 @@ importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,do.call)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,plotPCA)
+importFrom(BiocGenerics,rowMeans)
+importFrom(BiocGenerics,rowSums)
 importFrom(BiocGenerics,rownames)
 importFrom(BiocGenerics,sapply)
 importFrom(BiocParallel,"bpprogressbar<-")
@@ -110,8 +112,6 @@ importFrom(BiocParallel,bpprogressbar)
 importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,results)
-importFrom(Matrix,rowMeans)
-importFrom(Matrix,rowSums)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,as.data.frame)
@@ -192,6 +192,7 @@ importFrom(basejump,plotGene)
 importFrom(basejump,printString)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
+importFrom(basejump,showSlotInfo)
 importFrom(basejump,snake)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,upperCamel)
