--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(plotGene)
 export(plotKnownMarkers)
 export(plotKnownMarkersDetected)
 export(plotMarker)
+export(plotPCA)
 export(plotPCElbow)
 export(plotReducedDim)
 export(plotTSNE)
@@ -139,39 +140,6 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(SummarizedExperiment,rowRanges)
-importFrom(assertive.base,assert_all_are_not_na)
-importFrom(assertive.base,assert_are_identical)
-importFrom(assertive.numbers,assert_all_are_in_left_open_range)
-importFrom(assertive.numbers,assert_all_are_in_open_range)
-importFrom(assertive.numbers,assert_all_are_non_negative)
-importFrom(assertive.numbers,assert_all_are_positive)
-importFrom(assertive.properties,assert_has_names)
-importFrom(assertive.properties,assert_has_no_duplicates)
-importFrom(assertive.properties,assert_has_rows)
-importFrom(assertive.properties,assert_is_non_empty)
-importFrom(assertive.properties,assert_is_of_length)
-importFrom(assertive.properties,assert_is_scalar)
-importFrom(assertive.sets,assert_are_disjoint_sets)
-importFrom(assertive.sets,assert_are_intersecting_sets)
-importFrom(assertive.sets,assert_is_subset)
-importFrom(assertive.sets,is_subset)
-importFrom(assertive.types,assert_is_a_bool)
-importFrom(assertive.types,assert_is_a_number)
-importFrom(assertive.types,assert_is_a_string)
-importFrom(assertive.types,assert_is_all_of)
-importFrom(assertive.types,assert_is_an_integer)
-importFrom(assertive.types,assert_is_any_of)
-importFrom(assertive.types,assert_is_character)
-importFrom(assertive.types,assert_is_data.frame)
-importFrom(assertive.types,assert_is_factor)
-importFrom(assertive.types,assert_is_function)
-importFrom(assertive.types,assert_is_list)
-importFrom(assertive.types,assert_is_matrix)
-importFrom(assertive.types,assert_is_numeric)
-importFrom(assertive.types,assert_is_tbl_df)
-importFrom(assertive.types,is_a_string)
-importFrom(assertthat,assert_that)
-importFrom(assertthat,validate_that)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,Gene2Symbol)
@@ -188,7 +156,6 @@ importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,metrics)
-importFrom(basejump,plotGene)
 importFrom(basejump,printString)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
@@ -196,6 +163,26 @@ importFrom(basejump,showSlotInfo)
 importFrom(basejump,snake)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,upperCamel)
+importFrom(bioverbs,cellCountsPerCluster)
+importFrom(bioverbs,cellTypesPerCluster)
+importFrom(bioverbs,clusterCellCountsPerSample)
+importFrom(bioverbs,clusterID)
+importFrom(bioverbs,diffExp)
+importFrom(bioverbs,diffExpPerCluster)
+importFrom(bioverbs,findMarkers)
+importFrom(bioverbs,plotCellTypesPerCluster)
+importFrom(bioverbs,plotDot)
+importFrom(bioverbs,plotFeature)
+importFrom(bioverbs,plotGene)
+importFrom(bioverbs,plotKnownMarkers)
+importFrom(bioverbs,plotMarker)
+importFrom(bioverbs,plotPCElbow)
+importFrom(bioverbs,plotReducedDim)
+importFrom(bioverbs,plotTSNE)
+importFrom(bioverbs,plotTopMarkers)
+importFrom(bioverbs,plotUMAP)
+importFrom(bioverbs,plotViolin)
+importFrom(bioverbs,topMarkers)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
@@ -241,16 +228,14 @@ importFrom(ggplot2,scale_radius)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
-importFrom(goalie,assertHasRownames)
-importFrom(goalie,assertIsAlpha)
-importFrom(goalie,assertIsAnImplicitInteger)
-importFrom(goalie,assertIsColorScaleContinuousOrNULL)
-importFrom(goalie,assertIsColorScaleDiscreteOrNULL)
-importFrom(goalie,assertIsFillScaleDiscreteOrNULL)
-importFrom(goalie,assertIsHeaderLevel)
-importFrom(goalie,assertIsImplicitInteger)
-importFrom(goalie,assertIsStringOrNULL)
+importFrom(goalie,assert)
 importFrom(goalie,hasRownames)
+importFrom(goalie,isAlpha)
+importFrom(goalie,isGGScale)
+importFrom(goalie,isHeaderLevel)
+importFrom(goalie,isInt)
+importFrom(goalie,isIntegerish)
+importFrom(goalie,validate)
 importFrom(googlesheets,gs_key)
 importFrom(googlesheets,gs_read)
 importFrom(magrittr,"%>%")
@@ -263,6 +248,7 @@ importFrom(methods,getMethod)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,setAs)
+importFrom(methods,setClass)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
