--- a/NAMESPACE
+++ b/NAMESPACE
@@ -228,13 +228,30 @@ importFrom(ggplot2,scale_radius)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(goalie,allAreInLeftOpenRange)
+importFrom(goalie,allAreNonNegative)
+importFrom(goalie,allArePositive)
+importFrom(goalie,areDisjointSets)
+importFrom(goalie,areIntersectingSets)
 importFrom(goalie,assert)
+importFrom(goalie,hasLength)
+importFrom(goalie,hasNames)
 importFrom(goalie,hasRownames)
+importFrom(goalie,hasRows)
 importFrom(goalie,isAlpha)
+importFrom(goalie,isAny)
+importFrom(goalie,isCharacter)
+importFrom(goalie,isFlag)
 importFrom(goalie,isGGScale)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
 importFrom(goalie,isIntegerish)
+importFrom(goalie,isNonEmpty)
+importFrom(goalie,isNumber)
+importFrom(goalie,isPositive)
+importFrom(goalie,isScalar)
+importFrom(goalie,isString)
+importFrom(goalie,isSubset)
 importFrom(goalie,validate)
 importFrom(googlesheets,gs_key)
 importFrom(googlesheets,gs_read)
