--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ r_packages:
 bioc_packages:
   - BiocCheck
 r_github_packages:
-  - jimhester/lintr
+  - mjsteinbaugh/lintr
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
