--- a/.travis.yml
+++ b/.travis.yml
@@ -4,53 +4,22 @@
 language: r
 cache: packages
 
-r:
-  - bioc-release
-  # - bioc-devel
-
-os:
-  # - linux
-  - osx
-
 matrix:
-  exclude:
+  include:
+  - os: linux
+    r: release
   - os: osx
-    r: bioc-devel
-
-# blocklist
-# branches:
-#   except:
-#   - develop
-
-# safelist
-# branches:
-#   only:
-#   - master
+    r: release
 
 env:
   global:
     - LINTR_COMMENT_BOT=true
 
-# r_build_args: "--no-build-vignettes"
-# r_check_args: "--no-vignettes"
-
-# Set true before submission to Bioconductor
-warnings_are_errors: false
-
-# Temporarily enable when caching Bioconductor packages
-# script: true
-
-r_packages:
-  - covr
-bioc_packages:
-  - BiocCheck
-r_github_packages:
-  - jimhester/lintr
+github_packages:
+  - mjsteinbaugh/lintr
 
 after_success:
   - Rscript -e 'lintr::lint_package()'
-  - Rscript -e 'covr::codecov()'
-  - R CMD BiocCheck .
 
 notifications:
   email:
