--- a/NAMESPACE
+++ b/NAMESPACE
@@ -292,4 +292,4 @@ importFrom(utils,packageVersion)
 importFrom(zinbwave,glmWeightedF)
 importFrom(zinbwave,zinbFit)
 importFrom(zinbwave,zinbwave)
-importMethodsFrom(basejump,coerce)
+importMethodsFrom(S4Transformer,coerce)
