--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-Cell Clustering Visualization
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.2.3
-Date: 2019-01-08
+Version: 0.2.4
+Date: 2019-01-15
 Authors@R: c(
     person(
         given = "Michael",
@@ -28,9 +28,9 @@ LazyData: false
 Depends:
     R (>= 3.5),
     SingleCellExperiment (>= 1.2),
-    basejump (>= 0.9.3)
+    basejump (>= 0.9.4)
 Imports:
-    S4Transformer (>= 0.1), bioverbs (>= 0.1.2), goalie (>= 0.2.4),
+    bioverbs (>= 0.1.3), goalie (>= 0.2.5),
     BiocGenerics, BiocParallel, DESeq2 (>= 1.20), S4Vectors,
         SummarizedExperiment, edgeR (>= 3.22), zinbwave,
     Matrix (>= 1.2), Seurat (>= 2.3), cowplot (>= 0.9), dplyr (>= 0.7),
@@ -42,7 +42,6 @@ Suggests:
     BiocStyle, splatter,
     patrick, roxygen2, testthat
 Remotes:
-    steinbaugh/S4Transformer,
     steinbaugh/basejump,
     steinbaugh/goalie
 biocViews:
