Improve S4 marker to tibble coercion method, using `decode()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ importFrom(basejump,Gene2Symbol)
 importFrom(basejump,camel)
 importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
+importFrom(basejump,decode)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
