--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 # Travis-CI configuration for Bioconductor packages
 # https://docs.travis-ci.com/user/languages/r
 
+# Single-cell configuration recommendations:
+# https://github.com/satijalab/seurat/blob/master/.travis.yml
+# https://github.com/drisso/zinbwave/blob/master/.travis.yml
+
 language: r
 cache: packages
+
+# Necessary to install hdf5 update for Seurat/hdf5r (>= 1.8.13).
+sudo: required
 
 matrix:
   include:
@@ -15,6 +22,20 @@ branches:
   only:
   - master
 
+env:
+  global:
+    # These are taken from the Seurat Travis CI config.
+    # 1.10.4 is current. 1.8.17 used for Seurat CI.
+    # https://www.hdfgroup.org/downloads/hdf5/
+    # - HDF5_VERSION=1.8.17
+    - HDF5_VERSION=1.10.4
+    - HDF5_RELEASE_URL="https://support.hdfgroup.org/ftp/HDF5/releases"
+    - LINTR_COMMENT_BOT=true
+
+before_install:
+  - chmod +x travis_setup.sh
+  - ./travis_setup.sh
+
 # External dependencies
 # These are needed to install zinbwave on Linux.
 addons:
@@ -22,11 +43,8 @@ addons:
     packages:
       - gsl-bin
       - libgsl-dev
-      - libhdf5-dev
-
-env:
-  global:
-    - LINTR_COMMENT_BOT=true
+      # This is too old for hdf5r. Install from source instead.
+      # - libhdf5-dev
 
 github_packages:
   - mjsteinbaugh/lintr
