--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@
 
 # Single-cell configuration recommendations:
 # https://github.com/satijalab/seurat/blob/master/.travis.yml
+# https://github.com/satijalab/seurat/blob/release/3.0/.travis.yml
 # https://github.com/drisso/zinbwave/blob/master/.travis.yml
 
 language: r
@@ -27,8 +28,7 @@ env:
     # These are taken from the Seurat Travis CI config.
     # 1.10.4 is current. 1.8.17 used for Seurat CI.
     # https://www.hdfgroup.org/downloads/hdf5/
-    # - HDF5_VERSION=1.8.17
-    - HDF5_VERSION=1.10.4
+    - HDF5_VERSION=1.8.17
     - HDF5_RELEASE_URL="https://support.hdfgroup.org/ftp/HDF5/releases"
     - LINTR_COMMENT_BOT=true
 
@@ -36,14 +36,14 @@ before_install:
   - chmod +x travis_setup.sh
   - ./travis_setup.sh
 
-# External dependencies
+# External dependencies.
 # These are needed to install zinbwave on Linux.
 addons:
   apt:
     packages:
       - gsl-bin
       - libgsl-dev
-      # This is too old for hdf5r. Install from source instead.
+      # This is too old for hdf5r. Installing from source instead.
       # - libhdf5-dev
 
 github_packages:
