--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,17 @@
 # https://github.com/satijalab/seurat/blob/release/3.0/.travis.yml
 # https://github.com/drisso/zinbwave/blob/master/.travis.yml
 
+# hdf5r 1.0.1 won't install correctly.
+# This package has major compilation issues across platforms.
+#
+# https://github.com/hhoeflin/hdf5r/issues/94#issuecomment-442890351
+# https://github.com/hhoeflin/hdf5r/issues/97
+#
+# unable to load shared object '/home/travis/R/Library/hdf5r/libs/hdf5r.so':
+# libhdf5_hl.so.10: cannot open shared object file: No such file or directory
+# Installing 1.0.0 works on Azure Red Hat VM, and should work here too.
+# This is a pain to manage, and switching to BioC 3.8 docker makes sense.
+
 language: r
 cache: packages
 
@@ -16,8 +27,9 @@ matrix:
   include:
   - os: linux
     r: release
-  - os: osx
-    r: release
+  # Disabled until macOS uses BioC 3.8 by default.
+  # - os: osx
+  #   r: release
 
 branches:
   only:
