--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,8 @@ install:
 
 platform: x64
 
-cache:
-  - C:\RLibrary
+# cache:
+#   - C:\RLibrary
 
 environment:
   global:
@@ -49,3 +49,9 @@ artifacts:
 
   - path: '\*_*.zip'
     name: Bits
+
+notifications:
+  - provider: Email
+    to:
+      - mike@steinbaugh.com
+    on_build_status_changed: true
