--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-Cell Clustering Visualization
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.2.4
-Date: 2019-01-24
+Version: 0.2.5
+Date: 2019-02-12
 Authors@R: c(
     person(
         given = "Michael",
@@ -28,12 +28,12 @@ LazyData: false
 Depends:
     R (>= 3.5),
     SingleCellExperiment (>= 1.4),
-    basejump (>= 0.9.7)
+    basejump (>= 0.9.9)
 Imports:
-    bioverbs (>= 0.1.4), goalie (>= 0.2.6),
+    bioverbs (>= 0.1.6), goalie (>= 0.2.8),
     BiocGenerics, BiocParallel, DESeq2 (>= 1.22), S4Vectors,
         SummarizedExperiment, edgeR (>= 3.24), zinbwave (>= 1.4),
-    Matrix (>= 1.2), Seurat (>= 2.3), cowplot (>= 0.9), dplyr (>= 0.7),
+    Matrix (>= 1.2), Seurat (== 2.3.4), cowplot (>= 0.9), dplyr (>= 0.7),
         ggplot2 (>= 3.1), googlesheets (>= 0.3), magrittr (>= 1.5),
         pbapply (>= 1.3), rlang (>= 0.3), sessioninfo (>= 1.1), tibble (>= 2.0),
         tidyr (>= 0.8),
