--- a/.travis.yml
+++ b/.travis.yml
@@ -14,20 +14,21 @@
 #
 # unable to load shared object '/home/travis/R/Library/hdf5r/libs/hdf5r.so':
 # libhdf5_hl.so.10: cannot open shared object file: No such file or directory
+#
 # Installing 1.0.0 works on Azure Red Hat VM, and should work here too.
 # This is a pain to manage, and switching to BioC 3.8 docker makes sense.
 
 language: r
 cache: packages
 
-# Necessary to install hdf5 update for Seurat/hdf5r (>= 1.8.13).
+# Necessary to build and install hdf5 from source.
 sudo: required
 
 matrix:
   include:
     - os: linux
       r: release
-    # Disabled until macOS uses BioC 3.8 by default.
+    # Disabled until macOS image is updated to BioC 3.8.
     # - os: osx
     #   r: release
 
@@ -35,14 +36,12 @@ branches:
   only:
     - master
 
-# These are taken from the Seurat Travis CI config.
-# 1.10.4 is current. 1.8.17 used for Seurat CI.
-# https://www.hdfgroup.org/downloads/hdf5/
 env:
   global:
-    - HDF5_VERSION="1.8.17"
+    - HDF5_VERSION="1.10.4"
     - HDF5_RELEASE_URL="https://support.hdfgroup.org/ftp/HDF5/releases"
     - LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/local/lib"
+    - LINTR_COMMENT_BOT=true
 
 before_install:
   - chmod +x travis_setup.sh
@@ -55,12 +54,6 @@ addons:
     packages:
       - gsl-bin
       - libgsl-dev
-      # This is too old for hdf5r. Installing from source instead.
-      # - libhdf5-dev
-
-env:
-  global:
-    - LINTR_COMMENT_BOT=true
 
 github_packages:
   - steinbaugh/lintr
