--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ branches:
 # https://docs.travis-ci.com/user/environment-variables/
 env:
   global:
+    - HDF5_RELEASE_URL="https://support.hdfgroup.org/ftp/HDF5/releases"
     - HDF5_VERSION="1.10.4"
     - LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/local/lib"
     - LINTR_COMMENT_BOT=true
