--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,13 @@ matrix:
   include:
     - os: linux
       r: bioc-release
-    # Disabled until macOS image is updated to BioC 3.8.
-    # - os: osx
-    #   r: bioc-release
+    - os: linux
+      r: bioc-devel
+    - os: osx
+      r: bioc-release
+  allow_failures:
+    - os: osx
+    - r: bioc-devel
 
 branches:
   only:
