--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-Cell Clustering Visualization
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.2.5
-Date: 2019-02-12
+Date: 2019-03-20
 Authors@R: c(
     person(
         given = "Michael",
@@ -28,13 +28,13 @@ LazyData: false
 Depends:
     R (>= 3.5),
     SingleCellExperiment (>= 1.4),
-    basejump (>= 0.9.10)
+    basejump (>= 0.9.12)
 Imports:
-    bioverbs (>= 0.1.6), goalie (>= 0.2.8),
+    bioverbs (>= 0.1.8), goalie (>= 0.2.11),
     BiocGenerics, BiocParallel, DESeq2 (>= 1.22), S4Vectors,
         SummarizedExperiment, edgeR (>= 3.24), zinbwave (>= 1.4),
-    Matrix (>= 1.2), Seurat (== 2.3.4), cowplot (>= 0.9), dplyr (>= 0.7),
-        ggplot2 (>= 3.1), googlesheets (>= 0.3), magrittr (>= 1.5),
+    Matrix (>= 1.2), Seurat (== 2.3.4), cowplot (>= 0.9), dplyr (>= 0.8),
+        ggplot2 (>= 3.1), magrittr (>= 1.5),
         pbapply (>= 1.3), rlang (>= 0.3), sessioninfo (>= 1.1), tibble (>= 2.0),
         tidyr (>= 0.8),
     methods, scales
