--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,8 +77,8 @@ Collate:
     'package.R'
     'plotCellCountsPerCluster-methods.R'
     'plotCellTypesPerCluster-methods.R'
+    'plotCounts-methods.R'
     'plotFeature-methods.R'
-    'plotGene-methods.R'
     'plotKnownMarkers-methods.R'
     'plotMarker-methods.R'
     'plotPCElbow-methods.R'
