--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,9 @@ export(importCellTypeMarkersFromGoogle)
 export(knownMarkers)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
+export(plotCounts)
 export(plotDot)
 export(plotFeature)
-export(plotGene)
 export(plotKnownMarkers)
 export(plotKnownMarkersDetected)
 export(plotMarker)
@@ -69,9 +69,9 @@ exportMethods(mapGenesToSymbols)
 exportMethods(metadata)
 exportMethods(metrics)
 exportMethods(plotCellTypesPerCluster)
+exportMethods(plotCounts)
 exportMethods(plotDot)
 exportMethods(plotFeature)
-exportMethods(plotGene)
 exportMethods(plotKnownMarkers)
 exportMethods(plotMarker)
 exportMethods(plotPCA)
@@ -172,9 +172,9 @@ importFrom(bioverbs,diffExp)
 importFrom(bioverbs,diffExpPerCluster)
 importFrom(bioverbs,findMarkers)
 importFrom(bioverbs,plotCellTypesPerCluster)
+importFrom(bioverbs,plotCounts)
 importFrom(bioverbs,plotDot)
 importFrom(bioverbs,plotFeature)
-importFrom(bioverbs,plotGene)
 importFrom(bioverbs,plotKnownMarkers)
 importFrom(bioverbs,plotMarker)
 importFrom(bioverbs,plotPCElbow)
