--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ Depends:
 Imports:
     bioverbs (>= 0.1.8), goalie (>= 0.2.11),
     BiocGenerics, BiocParallel, DESeq2 (>= 1.22), S4Vectors,
-        SummarizedExperiment, edgeR (>= 3.24), zinbwave (>= 1.4),
+        SummarizedExperiment, edgeR (>= 3.24),
     Matrix (>= 1.2), Seurat (== 2.3.4), cowplot (>= 0.9), dplyr (>= 0.8),
         ggplot2 (>= 3.1), magrittr (>= 1.5),
         pbapply (>= 1.3), rlang (>= 0.3), sessioninfo (>= 1.1), tibble (>= 2.0),
@@ -84,7 +84,6 @@ Collate:
     'plotPCElbow-methods.R'
     'plotReducedDim-methods.R'
     'plotTopMarkers-methods.R'
-    'runZinbwave-methods.R'
     'seurat-SingleCellExperiment-methods.R'
     'show-methods.R'
     'summary-methods.R'
