--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,7 +161,6 @@ importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,snake)
-importFrom(basejump,theme_midnight)
 importFrom(basejump,upperCamel)
 importFrom(bioverbs,cellCountsPerCluster)
 importFrom(bioverbs,cellTypesPerCluster)
@@ -267,6 +266,8 @@ importFrom(methods,setClass)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(minimalism,theme_midnight)
+importFrom(minimalism,theme_paperwhite)
 importFrom(pbapply,pblapply)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
