--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,7 @@ importFrom(basejump,metrics)
 importFrom(basejump,printString)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
+importFrom(basejump,separator)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,snake)
 importFrom(basejump,upperCamel)
@@ -227,6 +228,7 @@ importFrom(ggplot2,scale_radius)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_set)
 importFrom(goalie,allAreInLeftOpenRange)
 importFrom(goalie,allAreNonNegative)
 importFrom(goalie,allArePositive)
