--- a/NAMESPACE
+++ b/NAMESPACE
@@ -206,6 +206,7 @@ importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
 importFrom(edgeR,glmFit)
+importFrom(edgeR,glmLRT)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,expand_limits)
