--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,9 +39,11 @@ Imports:
         tidyr (>= 0.8),
     methods, scales
 Suggests:
+    acidtest (>= 0.1.1),
     BiocStyle, splatter,
     patrick, roxygen2, testthat
 Remotes:
+    acidgenomics/acidtest,
     acidgenomics/basejump,
     acidgenomics/bioverbs,
     acidgenomics/goalie,
