--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,9 +34,8 @@ Imports:
     BiocGenerics, BiocParallel, DESeq2 (>= 1.22), S4Vectors,
         SummarizedExperiment, edgeR (>= 3.24),
     Matrix (>= 1.2), Seurat (== 2.3.4), cowplot (>= 0.9), dplyr (>= 0.8),
-        ggplot2 (>= 3.1), magrittr (>= 1.5),
-        pbapply (>= 1.3), rlang (>= 0.3), sessioninfo (>= 1.1), tibble (>= 2.0),
-        tidyr (>= 0.8),
+        ggplot2 (>= 3.1), magrittr (>= 1.5), pbapply (>= 1.3), rlang (>= 0.3),
+        sessioninfo (>= 1.1), tibble (>= 2.0), tidyr (>= 0.8),
     methods, scales
 Suggests:
     acidtest (>= 0.1.1),
