--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,14 @@ sudo: required
 
 matrix:
   include:
+    - os: osx
+      r: bioc-release
     - os: linux
       r: bioc-release
     - os: linux
       r: bioc-devel
-    - os: osx
-      r: bioc-release
   allow_failures:
-    - os: osx
-    - r: bioc-devel
+    - os: linux
   fast_finish: true
 
 branches:
