--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,7 +91,7 @@ exportMethods(show)
 exportMethods(summary)
 exportMethods(topMarkers)
 exportMethods(weights)
-importClassesFrom(Seurat,seurat)
+importClassesFrom(Seurat,Seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,cbind)
@@ -124,7 +124,6 @@ importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
-importFrom(Seurat,Convert)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(SingleCellExperiment,"weights<-")
 importFrom(SingleCellExperiment,reducedDimNames)
