--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,12 +67,12 @@ Collate:
     'CellMarkers.R'
     'KnownMarkers-methods.R'
     'SeuratMarkers.R'
-    'as-methods.R'
     'assertions-internal.R'
     'cellCountsPerCluster-methods.R'
     'cellTypesPerCluster-methods.R'
     'clusterCellCountsPerSample-methods.R'
     'clusterID-methods.R'
+    'coerce-methods.R'
     'data.R'
     'deprecated.R'
     'globals.R'
