Rework Seurat S4 SCE-like method support

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,6 +66,7 @@ Collate:
     'AllGenerics.R'
     'CellMarkers.R'
     'KnownMarkers-methods.R'
+    'Seurat-SCE-methods.R'
     'SeuratMarkers.R'
     'assertions-internal.R'
     'cellCountsPerCluster-methods.R'
@@ -92,7 +93,6 @@ Collate:
     'plotPCElbow-methods.R'
     'plotReducedDim-methods.R'
     'plotTopMarkers-methods.R'
-    'seurat-SingleCellExperiment-methods.R'
     'show-methods.R'
     'summary-methods.R'
     'topMarkers-methods.R'
