--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,8 @@ importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,as.Seurat)
+importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"weights<-")
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
