Seurat v3 compatibility updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,Stdev)
 importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"weights<-")
