--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,7 +125,9 @@ importFrom(S4Vectors,split)
 importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Stdev)
+importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,as.Seurat)
 importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,"weights<-")
