--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,7 @@ Depends:
 Imports:
     bioverbs (>= 0.1.11), goalie (>= 0.2.14), minimalism (>= 0.1),
     BiocGenerics, BiocParallel, DESeq2 (>= 1.22), S4Vectors,
-        SummarizedExperiment, edgeR (>= 3.24),
+        SummarizedExperiment, edgeR (>= 3.24), monocle (>= 2.10),
     Matrix (>= 1.2), Seurat (>= 3.0), cowplot (>= 0.9), dplyr (>= 0.8),
         ggplot2 (>= 3.1), magrittr (>= 1.5), pbapply (>= 1.3), rlang (>= 0.3),
         sessioninfo (>= 1.1), tibble (>= 2.1), tidyr (>= 0.8),
@@ -50,8 +50,7 @@ Remotes:
     acidgenomics/basejump,
     acidgenomics/bioverbs,
     acidgenomics/goalie,
-    acidgenomics/minimalism,
-    satijalab/seurat@release/3.0
+    acidgenomics/minimalism
 biocViews:
     DataRepresentation,
     GeneExpression,
