Add additional reexports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(importCellCycleMarkersFromGoogle)
 export(importCellTypeMarkersFromGoogle)
 export(knownMarkers)
 export(knownMarkersDetected)
+export(plotCellCountsPerCluster)
 export(plotCellTypesPerCluster)
 export(plotCounts)
 export(plotDot)
@@ -34,6 +35,7 @@ export(readCellTypeMarkers)
 export(runZinbwave)
 export(sanitizeMarkers)
 export(show)
+export(summary)
 export(topMarkers)
 exportClasses(CellCycleMarkers)
 exportClasses(CellTypeMarkers)
@@ -68,6 +70,7 @@ exportMethods(mapGenesToRownames)
 exportMethods(mapGenesToSymbols)
 exportMethods(metadata)
 exportMethods(metrics)
+exportMethods(plotCellCountsPerCluster)
 exportMethods(plotCellTypesPerCluster)
 exportMethods(plotCounts)
 exportMethods(plotDot)
@@ -174,6 +177,7 @@ importFrom(bioverbs,clusterID)
 importFrom(bioverbs,diffExp)
 importFrom(bioverbs,diffExpPerCluster)
 importFrom(bioverbs,findMarkers)
+importFrom(bioverbs,plotCellCountsPerCluster)
 importFrom(bioverbs,plotCellTypesPerCluster)
 importFrom(bioverbs,plotCounts)
 importFrom(bioverbs,plotDot)
