--- a/NAMESPACE
+++ b/NAMESPACE
@@ -220,6 +220,7 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,expand_limits)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_line)
