--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker pull acidgenomics/singlecell
   - docker images
     # Prevent BiocCheck > checkCodingPractice > checkLogicalUseFiles error.
-  - touch inst/rmarkdown/templates/*/skeleton/_{footer,header,links}.Rmd
+  - touch inst/rmarkdown/templates/seurat-{clustering,markers,per-cluster-analysis}/skeleton/_{footer,header,links}.Rmd
 
 script:
   - docker run -ti --user="bioc" --volume="${PWD}:/pointillism" --workdir="/pointillism" acidgenomics/singlecell Rscript -e 'source("travis-docker.R")'
