Tighten up code to pass BiocCheck checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,6 +61,7 @@ biocViews:
     Visualization
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
 Collate: 
     'AllClasses.R'
     'AllGenerics.R'
