--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,7 @@ Imports:
 Suggests:
     acidtest (>= 0.1.1),
     BiocStyle, splatter,
-    patrick, roxygen2, testthat
+    knitr, patrick, roxygen2, testthat
 Remotes:
     acidgenomics/acidtest,
     acidgenomics/basejump,
