--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ Imports:
     Matrix (>= 1.2), Seurat (>= 3.0), cowplot (>= 0.9), dplyr (>= 0.8),
         ggplot2 (>= 3.1), magrittr (>= 1.5), pbapply (>= 1.3), rlang (>= 0.3),
         sessioninfo (>= 1.1), tibble (>= 2.1), tidyr (>= 0.8),
-    methods, scales
+    methods, scales, stats, utils
 Suggests:
     acidtest (>= 0.1.1),
     BiocStyle, splatter,
