--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Depends:
     SingleCellExperiment (>= 1.4),
     basejump (>= 0.10.3)
 Imports:
-    bioverbs (>= 0.1.12), goalie (>= 0.2.14), minimalism (>= 0.1.1),
+    acidplots (>= 0.2.0), bioverbs (>= 0.1.12), goalie (>= 0.2.14),
     BiocGenerics, BiocParallel, DESeq2 (>= 1.22), S4Vectors,
         SummarizedExperiment, edgeR (>= 3.24),
     Matrix (>= 1.2), Seurat (>= 3.0), cowplot (>= 0.9), dplyr (>= 0.8),
@@ -46,11 +46,11 @@ Suggests:
     BiocStyle, splatter,
     knitr, patrick, roxygen2, testthat
 Remotes:
+    acidgenomics/acidplots,
     acidgenomics/acidtest,
     acidgenomics/basejump,
     acidgenomics/bioverbs,
-    acidgenomics/goalie,
-    acidgenomics/minimalism
+    acidgenomics/goalie
 biocViews:
     Clustering,
     DataRepresentation,
