--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,8 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(acidplots,acid_theme_dark)
+importFrom(acidplots,acid_theme_light)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,Gene2Symbol)
@@ -278,8 +280,6 @@ importFrom(methods,setClass)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(minimalism,theme_midnight)
-importFrom(minimalism,theme_paperwhite)
 importFrom(pbapply,pblapply)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
