--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,56 @@ branches:
   only:
     - master
 
+before_script:
+  - chmod +x travis-docker.sh
+  # Avoid BiocCheck > checkCodingPractice > checkLogicalUseFiles error.
+  - touch inst/rmarkdown/templates/seurat-{clustering,markers,per-cluster-analysis}/skeleton/_{footer,header,links}.Rmd
+
+jobs:
+  include:
+    - stage: test
+      name: "Docker: Bioconductor 3.9"
+      script: image="singlecell" tag="bioc-3.9" ./travis-docker.sh
+    - stage: test
+      name: "Docker: Bioconductor 3.8"
+      script: image="singlecell" tag="bioc-3.8" ./travis-docker.sh
+    - stage: test
+      name: "Docker: Bioconductor 3.7"
+      script: image="singlecell" tag="bioc-3.7" ./travis-docker.sh
+
+matrix:
+  fast_finish: true
+
+after_failure:
+  - env | sort
+  - df -h
+  - docker images
+
+notifications:
+  email:
+    recipients:
+      - mike@steinbaugh.com
+    on_success: change
+    on_failure: change
+
+
+
+
+
+
+language: general
+
+services:
+  - docker
+
+branches:
+  only:
+    - master
+
 before_install:
   - docker pull acidgenomics/singlecell
   - docker images
-    # Prevent BiocCheck > checkCodingPractice > checkLogicalUseFiles error.
-  - touch inst/rmarkdown/templates/seurat-{clustering,markers,per-cluster-analysis}/skeleton/_{footer,header,links}.Rmd
+
 
 script:
   - docker run -ti --user="bioc" --volume="${PWD}:/pointillism" --workdir="/pointillism" acidgenomics/singlecell Rscript -e 'source("travis-docker.R")'
