--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,18 +15,17 @@ branches:
 
 environment:
   global:
+    BIOC_USE_DEVEL: "FALSE"
     GCC_PATH: mingw_64
     R_ARCH: x64
     USE_RTOOLS: true
   matrix:
-    - R_VERSION: patched
-      BIOC_USE_DEVEL: "FALSE"
-    - R_VERSION: devel
-      BIOC_USE_DEVEL: "TRUE"
+    - configuration: 3.5
+      R_VERSION: 3.5.3
+    - configuration: 3.6
+      R_VERSION: 3.6.0
 
 matrix:
-  allow_failures:
-    - R_VERSION: devel
   fast_finish: true
 
 build_script:
