--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
-Version: 0.3.2
-Date: 2019-04-25
+Version: 0.3.3
+Date: 2019-07-16
 Authors@R: c(
     person(
         given = "Michael",
@@ -34,17 +34,38 @@ Depends:
     SingleCellExperiment (>= 1.4),
     basejump (>= 0.10.3)
 Imports:
-    acidplots (>= 0.2.0), bioverbs (>= 0.1.13), goalie (>= 0.2.15),
-    BiocGenerics, BiocParallel, DESeq2 (>= 1.22), S4Vectors,
-        SummarizedExperiment, edgeR (>= 3.24),
-    Matrix (>= 1.2), Seurat (>= 3.0), cowplot (>= 0.9), dplyr (>= 0.8),
-        ggplot2 (>= 3.1), magrittr (>= 1.5), pbapply (>= 1.3), rlang (>= 0.3),
-        sessioninfo (>= 1.1), tibble (>= 2.1), tidyr (>= 0.8),
-    methods, scales, stats, utils
+    acidplots (>= 0.2.0),
+    bioverbs (>= 0.1.13),
+    goalie (>= 0.2.15),
+    BiocGenerics,
+    BiocParallel,
+    DESeq2 (>= 1.22),
+    S4Vectors,
+    SummarizedExperiment,
+    edgeR (>= 3.24),
+    Matrix (>= 1.2),
+    Seurat (>= 3.0),
+    cowplot (>= 0.9),
+    dplyr (>= 0.8),
+    ggplot2 (>= 3.1),
+    magrittr (>= 1.5),
+    pbapply (>= 1.3),
+    rlang (>= 0.3),
+    sessioninfo (>= 1.1),
+    tibble (>= 2.1),
+    tidyr (>= 0.8),
+    methods,
+    scales,
+    stats,
+    utils
 Suggests:
-    acidtest (>= 0.1.1),
-    BiocStyle, splatter,
-    knitr, patrick, roxygen2, testthat
+    acidtest (>= 0.1.4),
+    BiocStyle,
+    splatter,
+    knitr,
+    patrick,
+    roxygen2,
+    testthat
 Remotes:
     acidgenomics/acidplots,
     acidgenomics/acidtest,
