--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ importFrom(basejump,decode)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
+importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToIDs)
 importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,mapGenesToSymbols)
