--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cellCountsPerCluster)
 export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
 export(clusterID)
+export(clusters)
 export(diffExp)
 export(diffExpPerCluster)
 export(findMarkers)
@@ -55,7 +56,7 @@ exportMethods(assays)
 exportMethods(cellCountsPerCluster)
 exportMethods(cellTypesPerCluster)
 exportMethods(clusterCellCountsPerSample)
-exportMethods(clusterID)
+exportMethods(clusters)
 exportMethods(coerce)
 exportMethods(colData)
 exportMethods(colnames)
@@ -95,6 +96,7 @@ exportMethods(topMarkers)
 exportMethods(weights)
 importClassesFrom(Seurat,Seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
+importClassesFrom(monocle3,cell_data_set)
 importFrom(BiocGenerics,"counts<-")
 importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,colnames)
@@ -128,6 +130,7 @@ importFrom(S4Vectors,summary)
 importFrom(S4Vectors,tail)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,GetAssayData)
+importFrom(Seurat,Idents)
 importFrom(Seurat,Stdev)
 importFrom(Seurat,VariableFeatures)
 importFrom(Seurat,as.Seurat)
@@ -175,7 +178,7 @@ importFrom(basejump,upperCamel)
 importFrom(bioverbs,cellCountsPerCluster)
 importFrom(bioverbs,cellTypesPerCluster)
 importFrom(bioverbs,clusterCellCountsPerSample)
-importFrom(bioverbs,clusterID)
+importFrom(bioverbs,clusters)
 importFrom(bioverbs,diffExp)
 importFrom(bioverbs,diffExpPerCluster)
 importFrom(bioverbs,findMarkers)
@@ -247,6 +250,7 @@ importFrom(goalie,allArePositive)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areIntersectingSets)
 importFrom(goalie,assert)
+importFrom(goalie,false)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
 importFrom(goalie,hasRownames)
