--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-cell RNA-seq toolkit
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.4.0
-Date: 2019-07-31
+Date: 2019-08-02
 Authors@R: c(
     person(
         given = "Michael",
@@ -35,8 +35,9 @@ Depends:
     basejump (>= 0.11.3)
 Imports:
     acidplots (>= 0.2.2),
-    bioverbs (>= 0.2),
+    bioverbs (>= 0.2.1),
     goalie (>= 0.3),
+    monocle3 (>= 0.1.2),
     BiocGenerics,
     BiocParallel,
     DESeq2 (>= 1.22),
@@ -59,9 +60,8 @@ Imports:
     stats,
     utils
 Suggests:
-    acidtest (>= 0.2.1),
+    acidtest (>= 0.2.2),
     BiocStyle,
-    monocle3 (>= 0.1.2),
     splatter,
     knitr,
     patrick,
@@ -96,7 +96,7 @@ Collate:
     'cellCountsPerCluster-methods.R'
     'cellTypesPerCluster-methods.R'
     'clusterCellCountsPerSample-methods.R'
-    'clusterID-methods.R'
+    'clusters-methods.R'
     'coerce-methods.R'
     'data.R'
     'deprecated.R'
