Add cell_data_set support

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -106,6 +106,7 @@ Collate:
     'fetchData-internal.R'
     'findMarkers-methods.R'
     'imports.R'
+    'metrics-methods.R'
     'package.R'
     'params.R'
     'plotCellCountsPerCluster-methods.R'
@@ -115,7 +116,7 @@ Collate:
     'plotKnownMarkers-methods.R'
     'plotMarker-methods.R'
     'plotPCElbow-methods.R'
-    'plotReducedDim-methods.R'
+    'plotReduction-methods.R'
     'plotTopMarkers-methods.R'
     'show-methods.R'
     'summary-methods.R'
