--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(importCellCycleMarkersFromGoogle)
 export(importCellTypeMarkersFromGoogle)
 export(knownMarkers)
 export(knownMarkersDetected)
+export(metrics)
 export(plotCellCountsPerCluster)
 export(plotCellTypesPerCluster)
 export(plotCounts)
@@ -27,7 +28,7 @@ export(plotKnownMarkersDetected)
 export(plotMarker)
 export(plotPCA)
 export(plotPCElbow)
-export(plotReducedDim)
+export(plotReduction)
 export(plotTSNE)
 export(plotTopMarkers)
 export(plotUMAP)
@@ -79,7 +80,7 @@ exportMethods(plotKnownMarkers)
 exportMethods(plotMarker)
 exportMethods(plotPCA)
 exportMethods(plotPCElbow)
-exportMethods(plotReducedDim)
+exportMethods(plotReduction)
 exportMethods(plotTSNE)
 exportMethods(plotTopMarkers)
 exportMethods(plotUMAP)
@@ -182,6 +183,7 @@ importFrom(bioverbs,clusters)
 importFrom(bioverbs,diffExp)
 importFrom(bioverbs,diffExpPerCluster)
 importFrom(bioverbs,findMarkers)
+importFrom(bioverbs,metrics)
 importFrom(bioverbs,plotCellCountsPerCluster)
 importFrom(bioverbs,plotCellTypesPerCluster)
 importFrom(bioverbs,plotCounts)
@@ -190,7 +192,7 @@ importFrom(bioverbs,plotFeature)
 importFrom(bioverbs,plotKnownMarkers)
 importFrom(bioverbs,plotMarker)
 importFrom(bioverbs,plotPCElbow)
-importFrom(bioverbs,plotReducedDim)
+importFrom(bioverbs,plotReduction)
 importFrom(bioverbs,plotTSNE)
 importFrom(bioverbs,plotTopMarkers)
 importFrom(bioverbs,plotUMAP)
@@ -251,6 +253,7 @@ importFrom(goalie,areDisjointSets)
 importFrom(goalie,areIntersectingSets)
 importFrom(goalie,assert)
 importFrom(goalie,false)
+importFrom(goalie,hasColnames)
 importFrom(goalie,hasLength)
 importFrom(goalie,hasNames)
 importFrom(goalie,hasRownames)
@@ -281,6 +284,7 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,setAs)
 importFrom(methods,setClass)
+importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
