Draft update to sizeFactor, normalization handling

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -103,6 +103,7 @@ Collate:
     'globals.R'
     'diffExp-methods.R'
     'diffExpPerCluster-methods.R'
+    'estimateSizeFactors-methods.R'
     'fetchData-internal.R'
     'findMarkers-methods.R'
     'imports.R'
@@ -119,6 +120,7 @@ Collate:
     'plotReduction-methods.R'
     'plotTopMarkers-methods.R'
     'show-methods.R'
+    'sizeFactors-methods.R'
     'summary-methods.R'
     'topMarkers-methods.R'
     'weights-internal.R'
