--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ exportMethods(colnames)
 exportMethods(counts)
 exportMethods(diffExp)
 exportMethods(diffExpPerCluster)
+exportMethods(estimateSizeFactors)
 exportMethods(findMarkers)
 exportMethods(interestingGroups)
 exportMethods(mapGenesToIDs)
@@ -92,6 +93,7 @@ exportMethods(rownames)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
+exportMethods(sizeFactors)
 exportMethods(summary)
 exportMethods(topMarkers)
 exportMethods(weights)
